<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dirtytweaks_title">Raven\'s Lair</string>
    <string name="dirtytweaks_summary">Unleash the Raven</string>
    <string name="dialog_team_title">The team</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_hardware_title">Hardware</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>
    <string name="corvus_parts_title">Corvus Parts</string>
    <string name="corvus_parts_summary">Corvus device specific parts</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tricks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tricks specific to system notifications</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tricks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen</string>
    <string name="lockscreen_style_title">Lockscreen Style</string>
    <string name="lockscreen_style_summary">Customize the lockscreen Style</string>
    <string name="switch_settings_title">Element</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable and configure the traffic indicators</string>
    <string name="ticker_title">Ticker</string>
    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tricks</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure volume rocker options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Configure navigation options</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sub_cat_advanced">Advanced</string>
    <string name="signal_icon_title">Signal Icon</string>
    <string name="switch_category">Advanced Switch</string>
    <string name="animation_settings_title">Screen Animations</string>
    <string name="animation_settings_summary">System Wide Screen Animation Options</string>
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_disabled_title">Power menu when locked</string>
    <string name="powermenu_disabled_summary">Disable power menu on secure lockscreen</string>
    <string name="powermenu_lockscreen_title">Lockscreen visibility</string>
    <string name="powermenu_lockscreen_summary">Display power menu on a secured lockscreen</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="cursor_section_header">Cursor</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_key_cursor_control_off">Disabled</string>
    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="volume_rocker_music_controls_title">Music control</string>
    <string name="volume_rocker_music_controls_summary">Long press volume buttons to switch tracks while screen off</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_stuff_title">Volume Button</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="screenshot_type_fullscreen">Take fullscreen screenshots</string>
    <string name="screenshot_type_partial">Drag selection on the area you want to take as a screenshot</string>
    <string name="screenshot_options_category">Screenshot options</string>
    <string name="screenshot_options_summary">Customize screenshot attributes like time, delay,type etc</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug/unplug</string>
    <string name="vibration_on_charge_state_changed_summary">Enable/disable vibration on plug/unplug</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_miui">VoLTE Miui Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="qs_brightness_slider_title">Brightness slider position</string>
    <string name="qs_brightness_slider_hide">Hidden</string>
    <string name="qs_brightness_slider_top">Top</string>
    <string name="qs_brightness_slider_bottom">Bottom</string>
    <string name="brightness_icon_title">Auto brightness icon</string>
    <string name="brightness_icon_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="navbar_invert_layout_title">Invert layout</string>
    <string name="qs_running_services_title">Running Services Icon</string>
    <string name="qs_running_services_summary">Enable the running services icon in the footer</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_scrollingcache_force_enable">Force enable</string>
    <string name="pref_scrollingcache_default_enable">Default enable</string>
    <string name="pref_scrollingcache_default_disable">Default disable</string>
    <string name="pref_scrollingcache_force_disable">Force disable</string>
    <string name="clock_hide_category">Clock auto hide </string>
    <string name="clock_style_category">Clock Style</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format">Date format</string>
    <string name="status_bar_clock_font_style_title">Clock font style</string>
    <string name="status_bar_clock_font_size_title">Clock font size</string>
    <string name="status_bar_clock_color_title">Clock font color</string>
    <string name="clock_date_position">Date position</string>
    <string name="status_bar_clock_auto_hide_title">Auto-hide clock</string>
    <string name="status_bar_clock_auto_hide_summary">Hide and show clock at regular intervals of time</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="gaming_mode_title">Gaming mode</string>
    <string name="gaming_mode_summary">Customize Gaming mode preferences</string>
    <string name="sensor_block_title">Sensor block per-package</string>
    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery</string>
    <string name="allow_signature_fake">Allow signature spoofing</string>
    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app.</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
</resources>