<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2018 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/miscellaneous_title" >

    <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
        android:key="gaming_mode_enabled"
        android:fragment="com.dirtyunicorns.tweaks.fragments.GamingMode"
        android:title="@string/gaming_mode_title"
        android:summary="@string/gaming_mode_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
        android:key="three_finger_gesture" 
        android:title="@string/three_finger_gesture" 
        android:summary="@string/three_finger_gesture_summary" 
        android:defaultValue="false" /> 

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
        android:key="headset_connect_player"
        android:title="@string/headset_connect_player_title"
        android:summary="@string/headset_connect_player_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
        android:key="allow_signature_fake"
        android:title="@string/allow_signature_fake"
        android:summary="@string/allow_signature_fake_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
        android:key="sensor_block"
        android:title="@string/sensor_block_title"
        android:summary="@string/sensor_block_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
        android:key="screenshot_type"
        android:entries="@array/screenshot_type_entries"
        android:entryValues="@array/screenshot_type_values"
        android:title="@string/screenshot_type_title" />

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
	android:key="vibrate_on_connect"
	android:title="@string/incall_vibrate_connect_title"
	android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
	android:key="vibrate_on_callwaiting"
	android:title="@string/incall_vibrate_call_wait_title"
	android:defaultValue="false" />

    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
	android:key="vibrate_on_disconnect"
	android:title="@string/incall_vibrate_disconnect_title"
	android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>
