<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2018 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/clock_options_title" >

    <PreferenceCategory
        android:key="clock_cat"
        android:title="@string/clock_cat">

        <SwitchPreference
            android:key="status_bar_show_clock"
            android:title="@string/status_bar_show_clock_title"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="status_bar_clock_seconds"
            android:title="@string/status_bar_clock_seconds_title"
            android:defaultValue="false"
            android:dependency="status_bar_show_clock" />

        <ListPreference
            android:key="clock_style"
            android:entries="@array/clock_style_entries"
            android:entryValues="@array/clock_style_values"
            android:title="@string/clock_title_enable"
            android:dependency="status_bar_show_clock" />

        <ListPreference
            android:key="status_bar_am_pm"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:title="@string/status_bar_am_pm_title"
            android:entries="@array/entries_status_bar_am_pm"
            android:entryValues="@array/values_status_bar_am_pm"
            android:dependency="status_bar_show_clock" />

        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_clock_auto_hide"
            android:title="@string/status_bar_clock_auto_hide_title"
            android:summary="@string/status_bar_clock_auto_hide_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
            android:key="status_bar_clock_auto_hide_hduration"
            android:title="@string/status_bar_clock_auto_hide_hdur_title"
            android:max="300"
            settings:min="5"
            settings:interval="5"
            settings:units="sec"
            android:dependency="status_bar_clock_auto_hide"
            android:defaultValue="60"
            android:persistent="false" />

        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
            android:key="status_bar_clock_auto_hide_sduration"
            android:title="@string/status_bar_clock_auto_hide_sdur_title"
            android:max="300"
            settings:min="5"
            settings:interval="5"
            settings:units="sec"
            android:dependency="status_bar_clock_auto_hide"
            android:defaultValue="5"
            android:persistent="false" />

        <ListPreference
            android:key="status_bar_clock_font_style"
            android:dialogTitle="@string/status_bar_clock_font_style_title"
            android:title="@string/status_bar_clock_font_style_title"
	    android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:defaultValue="28"
            android:dependency="status_bar_show_clock" />

        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
            android:key="status_bar_clock_size"
            android:title="@string/status_bar_clock_font_size_title"
            android:max="23"
            settings:min="5"
            android:defaultValue="14"
            android:dependency="status_bar_show_clock" />

        <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
            android:key="status_bar_clock_color"
            android:title="@string/status_bar_clock_color_title"
            android:defaultValue="0xffffffff"
            android:dependency="status_bar_show_clock" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="date_cat"
        android:title="@string/date_cat">

        <ListPreference
            android:key="clock_date_display"
            android:title="@string/clock_date_display"
            android:summary="@string/clock_date_display_summary"
            android:entries="@array/clock_date_display_entries"
            android:entryValues="@array/clock_date_display_values"
            android:dependency="status_bar_show_clock" />

        <ListPreference
            android:key="clock_date_style"
            android:title="@string/clock_date_style"
            android:entries="@array/clock_date_style_entries"
            android:entryValues="@array/clock_date_style_values"
            android:dependency="status_bar_show_clock" />

        <ListPreference
            android:key="clock_date_format"
            android:title="@string/clock_date_format"
            android:entries="@array/clock_date_format_entries_values"
            android:entryValues="@array/clock_date_format_entries_values"
            android:dependency="status_bar_show_clock" />

        <ListPreference
            android:key="statusbar_clock_date_position"
            android:title="@string/clock_date_position"
            android:entries="@array/clock_date_position_entries"
            android:entryValues="@array/clock_date_position_values"
            android:dependency="clock_date_display" />

    </PreferenceCategory>
</PreferenceScreen>
